--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,9 @@ jobs:
       matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
     steps:
       - uses: actions/checkout@v4
+      - uses: cachix/cachix-action@v14
+        with:
+          name: luciofranco-vim-config
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - uses: cachix/install-nix-action@v30
       - run: nix build -L '.#${{ matrix.attr }}'
