--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
     branches:
       - master
 
+env:
+  nix-conf: |-
+    accept-flake-config = true
+    always-allow-substitutes = true
+    builders-use-substitutes = true
+    max-jobs = auto
+
 jobs:
   nix-matrix:
     runs-on: ubuntu-latest
@@ -13,7 +20,9 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/nix-installer-action@v17
+        with:
+          extra-conf: ${{ env.nix-conf }}
       - id: set-matrix
         name: Generate Nix Matrix
         run: |
@@ -29,9 +38,12 @@ jobs:
       matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v30
+      - uses: DeterminateSystems/nix-installer-action@v17
+        with:
+          extra-conf: ${{ env.nix-conf }}
       - uses: cachix/cachix-action@v14
         with:
           name: luciofranco-vim-config
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+          extraPullNames: nix-community
       - run: nix build -L '.#${{ matrix.attr }}'
