--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,10 @@ jobs:
           name: luciofranco-vim-config
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
           extraPullNames: nix-community
-      - run: nix build -L '.#${{ matrix.attr }}'
+      - run: |
+          nix run .#nix-fast-build -- \
+            --no-nom \
+            --skip-cached \ 
+            --option accept-flake-config true \
+            --retries=3 \
+            --flake '.#${{ matrix.attr }}'
