--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,4 @@ jobs:
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
           extraPullNames: nix-community
       - run: |
-          nix run .#nix-fast-build -- \
-            --no-nom \
-            --skip-cached \ 
-            --retries=3 \
-            --flake '.#${{ matrix.attr }}'
+          nix run .#nix-fast-build -- --no-nom --skip-cached --flake '.#${{ matrix.attr }}'
